--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -1,5 +1,5 @@
 {% extends "@FOSUser/layout.html.twig" %}
 
-{% block fos_user_content %}
+{% block top %}
 {% include "@FOSUser/Registration/register_content.html.twig" %}
-{% endblock fos_user_content %}
+{% endblock top %}
