--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends "@FOSUser/layout.html.twig" %}
 
-{% block fos_user_content %}
+{% block top %}
     {{ include('@FOSUser/Security/login_content.html.twig') }}
-{% endblock fos_user_content %}
+{% endblock top %}
+
+
