--- a/app/Resources/views/photo/new.html.twig
+++ b/app/Resources/views/photo/new.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends "@FOSUser/layout.html.twig" %}
 
-{% block body %}
+{% block top %}
     <h1>Photo creation</h1>
 
     {{ form_start(form) }}
@@ -13,4 +13,9 @@
             <a href="{{ path('photo_index') }}">Back to the list</a>
         </li>
     </ul>
-{% endblock %}
+{% endblock top %}
+
+
+
+
+
