deleting single photos from gallery

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -86,16 +86,16 @@
 
 
         <div class="row probootstrap-gutter16">
-            <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_1.jpg')}});">
+            <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
+                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">
                     <div class="probootstrap-photo-details">
                         <h2>A turquoise colored sea</h2>
                         <p>Landscape</p>
                     </div>
                 </a>
             </div>
-            <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_2.jpg')}});">
+            <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
+                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">
                     <div class="probootstrap-photo-details">
                         <h2>Frozen Mount</h2>
                         <p>Landscape</p>
