deleting gallery also deletes all files from gallery now

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -61,8 +61,7 @@
 </header>
 <!-- END: header -->
 {% block top %}
-
-
+    
 <div class="probootstrap-section">
     <div class="container text-center">
         <div class="row">
@@ -84,6 +83,21 @@
             </div>
         {% endif %}
 
+
+        {#{% for gallery in galleries %}#}
+
+        <div class="row probootstrap-gutter16">
+            <div class="col-md-12 probootstrap-animate" data-animate-effect="fadeIn">
+                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">
+                    <div class="probootstrap-photo-details">
+                        <h2>A turquoise colored sea</h2>
+                        <p>Landscape</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        {#{% endfor %}#}
 
         <div class="row probootstrap-gutter16">
             <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
