galleries rendering on main page

--- a/app/Resources/views/gallery/edit.html.twig
+++ b/app/Resources/views/gallery/edit.html.twig
@@ -60,7 +60,7 @@
         {{ form_start(photo_form) }}
         <div class="form-group">
         {{ form_widget(photo_form) }}
-        <input type="submit" value="save" />
+        <input type="submit" value="Save file" />
         </div>
         {{ form_end(photo_form) }}
 
