--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -84,87 +84,87 @@
         {% endif %}
 
 
-        {#{% for gallery in galleries %}#}
-
+        {% for gallery in galleries %}
+        {% if gallery.photos.count %}
         <div class="row probootstrap-gutter16">
             <div class="col-md-12 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">
+                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/' ~ gallery.photos[0].imageName) }});">
                     <div class="probootstrap-photo-details">
-                        <h2>A turquoise colored sea</h2>
-                        <p>Landscape</p>
+                        <h2>{{ gallery.name }}</h2>
+                        {#<p></p>#}
                     </div>
                 </a>
             </div>
         </div>
+        {% endif %}
+        {% endfor %}
 
-        {#{% endfor %}#}
+        {#<div class="row probootstrap-gutter16">#}
+            {#<div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>A turquoise colored sea</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+            {#<div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>Frozen Mount</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+        {#</div>#}
 
-        <div class="row probootstrap-gutter16">
-            <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">
-                    <div class="probootstrap-photo-details">
-                        <h2>A turquoise colored sea</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/uploads/5a314a9a4ad23403573065.jpg')}});">
-                    <div class="probootstrap-photo-details">
-                        <h2>Frozen Mount</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-        </div>
+        {#<div class="row probootstrap-gutter16">#}
+            {#<div class="col-md-5 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_3.jpg')}});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>Earthly Clay</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+            {#<div class="col-md-3 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_5.jpg') }});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>Man Captured</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+            {#<div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_4.jpg') }});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>Mountain with pines</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+        {#</div>#}
 
-        <div class="row probootstrap-gutter16">
-            <div class="col-md-5 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_3.jpg')}});">
-                    <div class="probootstrap-photo-details">
-                        <h2>Earthly Clay</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_5.jpg') }});">
-                    <div class="probootstrap-photo-details">
-                        <h2>Man Captured</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_4.jpg') }});">
-                    <div class="probootstrap-photo-details">
-                        <h2>Mountain with pines</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="row probootstrap-gutter16">
-            <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_7.jpg') }});">
-                    <div class="probootstrap-photo-details">
-                        <h2>Mountains</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-                <a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_6.jpg') }});">
-                    <div class="probootstrap-photo-details">
-                        <h2>Beautiful Sunset</h2>
-                        <p>Landscape</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
+        {#<div class="row probootstrap-gutter16">#}
+            {#<div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_7.jpg') }});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>Mountains</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+            {#<div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">#}
+                {#<a href="single-page.html" class="img-bg" style="background-image: url({{ asset('img/img_6.jpg') }});">#}
+                    {#<div class="probootstrap-photo-details">#}
+                        {#<h2>Beautiful Sunset</h2>#}
+                        {#<p>Landscape</p>#}
+                    {#</div>#}
+                {#</a>#}
+            {#</div>#}
+        {#</div>#}
+    {#</div>#}
+{#</div>#}
 
 
 
