--- a/src/AppBundle/Resources/views/gallery/new.html.twig
+++ b/src/AppBundle/Resources/views/gallery/new.html.twig
@@ -1,7 +1,34 @@
-{% extends "::base.html.twig" %}
+{% extends "@FOSUser/layout.html.twig" %}
 
-{% block title %}AppBundle:Gallery:new{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Gallery:new page</h1>
-{% endblock %}
+{% block top %}
+<div class="container text-center">
+    <div class="row">
+        <h1>Gallery creation</h1>
+
+        {{ form_start(form) }}
+        <div class="form-group">
+            {{ form_label(form.name) }}
+            {{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.description) }}
+            {{ form_widget(form.description, { 'attr': {'class': 'form-control'} }) }}
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Create" />
+        </div>
+
+        {{ form_end(form) }}
+
+        <ul>
+            <li>
+                <a href="{{ path('gallery_index') }}">Back to the list</a>
+            </li>
+        </ul>
+    </div>
+</div>
+{% endblock top %}
+
+
+
